# DEDSProject

./: .gitignore  AenC.drawio  AenC.ipynb  Dockerfile  Mark.ipynb  NorthWind.ipynb  README.md  William.ipynb  docker-compose.yml  pyproject.toml  requirements.txt
src/dedsproject/: SDMinladen.ipynb
